[package]
authors = ["Jet Li <jing.i.qin@icloud.com>"]
categories = ["wasm"]
description = "Exemplary real world app built with Rust + Yew + WebAssembly."
edition = "2021"
license = "Apache-2.0/MIT"
name = "conduit-wasm"
repository = "https://github.com/jetli/rust-yew-realworld-example-app.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv_codegen = "0.15"
gloo = "0.11"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.12"
pulldown-cmark = "0.10"
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
thiserror = "1"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew-hooks = "0.3"
wasm-bindgen = "0.2"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
]

[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
gloo-utils = "0.2"
