[package]
name = "wasm-bindgen-test-ext"
version = "0.1.0"
authors = ["Jet Li <jing.i.qin@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.37"
wasm-bindgen = "0.2.60"
wasm-bindgen-futures = "0.4.10"
wasm-bindgen-test = "0.3.10"
